Made changes associated with new post

--- a/Shower Thoughts.html
+++ b/Shower Thoughts.html
@@ -109,6 +109,7 @@
     <h1>Simmering Conceptions</h1>
     <ul class="fragments-list">
       <li><a href="Process of inquiry.html" class="recent-post-link">Nascent ponderings</a></li>
+      <li><a href="General Intelligence Definition.html" class="recent-post-link">Pondering Upon General Intelligence</a></li>
     </ul>
   </section>
   </main>
