--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
       <li>
         <a href="Univariate Linear Regression.html" class="recent-post-link">A First Principles Approach to Univariate Linear Regression</a>
       </li>
+      <li>
+        <a href="General Intelligence Definition.html" class="recent-post-link">General Intelligence as a Manifold over a Task Space</a>
+      </li>
     </ul>
   </section>
   <script src="script.js"></script>
