--- a/General Intelligence Definition.html
+++ b/General Intelligence Definition.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-  <title>Process of inquiry</title>
+  <title>General Intelligence</title>
   <style>
     @media (max-width:880px) {
       .page-title{
@@ -103,7 +103,7 @@
           <span class="line"></span>
           <span class="line"></span>
         </div>
-        <div class="page-title" id="page-title">Inquiry</div>
+        <div class="page-title" id="page-title">General Intelligence</div>
         <div class="search-bar">
           <input type="text" placeholder="Ask the Oracle ..." aria-label="Search" id="search-input-small">
           <button type="button" id="search-button-small">
