--- a/Shower Thoughts.html
+++ b/Shower Thoughts.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-  <title>Noble Homer's Blog</title>
+  <title>Fragments</title>
   <style>
     @media (max-width:700px) {
       .page-title{
