--- a/Univariate Linear Regression.html
+++ b/Univariate Linear Regression.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-  <title>Process of inquiry</title>
+  <title>Univariate Linear Regression</title>
   <style>
     .captions {
         font-size: 1em;
