Corrected some facts pertaining to the general intelligence article

--- a/General Intelligence Definition.html
+++ b/General Intelligence Definition.html
@@ -140,9 +140,9 @@
         <p>
             	In that work, this disparity was attributed to the nature of SGD—which is used in training today’s large models—in contrast to how evolutionary processes result in a more factored internal world. At the very least, the fracturedness of these representations would make us question what kind of internal geometry human cognition might exhibit. Though speculative, perhaps the manifold model would be a viable candidate to capture this unification present within human cognition which enables us to function the way we do? Perhaps humans learn in a way that naturally builds continuous internal spaces? It should be noted that our understanding of human internal geometry is limited and so should be seen only as an analogy.
         </p>
-        <p>
+        <!-- <p>
             	 Chollet, in his formulation of intelligence, suggested the existence of a skill vector<a href="#[2]" class="link"><sup>[2]</sup></a> defined over a task space as a description of intelligence, shifting away from the scalar “g-factor” interpretation of it. This framing acknowledges the inherent structure of intelligence instead of it being reduced to a singular number. 
-        </p>
+        </p> -->
         <p>
             	Perhaps we could make the jump from his vectorial description to one which imposes a richer geometric structure—perhaps a manifold over a task space? Hence the problem lies not in measuring competence across disparate domains—which is something we are already passably good at—but rather finding a methodical and rigorous way to map tasks themselves, to define similarity amongst them, their neighbourhoods, and the curvature of this cognitive terrain. 
         </p>
@@ -154,7 +154,7 @@
         </h2>
         <div class="references" style="padding-bottom: 10%;">
             <p id="[1]">[1] Stanley, K. O., Lehman, J., Clune, J. (2025). <a href="https://arxiv.org/abs/2505.11581" class="link">https://arxiv.org/abs/2505.11581</a></p>
-            <p id="[2]">[2] Chollet, F. (2019). <a href="https://arxiv.org/abs/1911.01547" class="link">https://arxiv.org/abs/1911.01547</a></p>
+            <!-- <p id="[2]">[2] Chollet, F. (2019). <a href="https://arxiv.org/abs/1911.01547" class="link">https://arxiv.org/abs/1911.01547</a></p> -->
         </div>
     </div>
     <button id="back-to-top" style="display: none;">
