Minor change to general intelligence fragment

--- a/General Intelligence Definition.html
+++ b/General Intelligence Definition.html
@@ -144,7 +144,7 @@
             	 Chollet, in his formulation of intelligence, suggested the existence of a skill vector<a href="#[2]" class="link"><sup>[2]</sup></a> defined over a task space as a description of intelligence, shifting away from the scalar “g-factor” interpretation of it. This framing acknowledges the inherent structure of intelligence instead of it being reduced to a singular number. 
         </p> -->
         <p>
-            	Perhaps we could make the jump from his vectorial description to one which imposes a richer geometric structure—perhaps a manifold over a task space? Hence the problem lies not in measuring competence across disparate domains—which is something we are already passably good at—but rather finding a methodical and rigorous way to map tasks themselves, to define similarity amongst them, their neighbourhoods, and the curvature of this cognitive terrain. 
+            	<!-- Perhaps we could make the jump from his vectorial description to one which imposes a richer geometric structure—perhaps a manifold over a task space? Hence the problem lies not in measuring competence across disparate domains—which is something we are already passably good at—but rather finding a methodical and rigorous way to map tasks themselves, to define similarity amongst them, their neighbourhoods, and the curvature of this cognitive terrain.  -->
         </p>
         <p>
             	I haven’t arrived at a solution. The question still remains unanswered and a resolution would perhaps help clarify what we even mean by AGI moving forward. What if general intelligence is—bluntly put—nothing more than the continuity of a mind’s internal landscape? 
