Fixed some UIand UX  issues

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
   <section class="hero-background">
     <div class="parallax-image progressive-bg"  data-preview="The Great Red Dragon 1-low.jpg"  data-src="The Great Red Dragon 1.jpg"></div>
     <div class="overlay-text">
-      <a href="The Great Red Dragon.html" style="text-decoration: none; color: inherit;">
+      <!-- <a href="The Great Red Dragon.html" style="text-decoration: none; color: inherit;"> -->
       <h1>The Great Red Dragon</h1>
-      </a>
+      <!-- </a> -->
       <p>“And behold a great red dragon, having seven heads and ten horns, and seven crowns upon his heads.”</p>
     </div>
   </section>
