--- a/Shower Thoughts.html
+++ b/Shower Thoughts.html
@@ -108,8 +108,9 @@
   </div>
     <h1>Simmering Conceptions</h1>
     <ul class="fragments-list">
-      <li><a href="Process of inquiry.html" class="recent-post-link">Nascent ponderings</a></li>
+      <li><a href="Into the Inferno.html" class="recent-post-link">The day we killed God</a></li>
       <li><a href="General Intelligence Definition.html" class="recent-post-link">Pondering Upon General Intelligence</a></li>
+      <li><a href="Process of inquiry.html" class="recent-post-link">Nascent ponderings</a></li>
     </ul>
   </section>
   </main>
