--- a/index.html
+++ b/index.html
@@ -107,13 +107,16 @@
     <h1>Recent Posts</h1>
     <ul class="recent-post-list">
       <li>
-        <a href="Process of inquiry.html" class="recent-post-link">The Process of Inquiry</a>
+        <a href="Into the Inferno.html" class="recent-post-link">The day we killed God</a>
+      </li>
+      <li>
+        <a href="General Intelligence Definition.html" class="recent-post-link">General Intelligence as a Manifold over a Task Space</a>
       </li>
       <li>
         <a href="Univariate Linear Regression.html" class="recent-post-link">A First Principles Approach to Univariate Linear Regression</a>
       </li>
       <li>
-        <a href="General Intelligence Definition.html" class="recent-post-link">General Intelligence as a Manifold over a Task Space</a>
+        <a href="Process of inquiry.html" class="recent-post-link">The Process of Inquiry</a>
       </li>
     </ul>
   </section>
