More stylistic tweaks

--- a/Into the Inferno.html
+++ b/Into the Inferno.html
@@ -21,6 +21,10 @@
       .search-bar input{
         width: 16vh;
       }
+
+      .inferno2{
+        margin-top: -350px !important;
+      }
     }
 
     @media (max-width:555px) {
@@ -53,7 +57,7 @@
       }
 
       .inferno2{
-        margin-top: -175px !important;
+        margin-top: -250px !important;
       }
       
       .hero-container{
@@ -187,8 +191,10 @@ Or were we complacent with that which was given?
 Why did we ever refute it?</p>
 
 <p>If these questions are to be faced honestly, we must trace them downward to their origins...</p><br>
-<hr>  
-<h2>Metaphysical Submission</h2>
+  <div class="break1">
+    <hr>
+  </div>
+<h2 style="padding-top: 50px;">Metaphysical Submission</h2>
 
 <p>	There was a time when questioning the axiomatic priors of faith was not an intellectual exercise but a transgression. Meaning was not sought but received—cosmically guaranteed, externally anchored, and independent of individual assessment. Within such a framework, doubt did not function as permitted inquiry; its role was disruption.</p>
 
@@ -199,7 +205,7 @@ Why did we ever refute it?</p>
 <p>	This is not to say that the camel is weak—quite far from it—but the camel does not question the value of the burden. It proves itself by carrying it. 
 	But the camel can only travel so far. The metamorphosis of the camel was demanded by lucidity. By attempting to reconcile lived reality and inherited abstraction, incompatibility emerges. The camel no longer believes.</p>
 
-    </div>
+   </div>
     <button id="back-to-top" style="display: none;">
         <img src="Up.png" alt="Back to Top">
     </button>
