Updated Into the Inferno

--- a/Into the Inferno.html
+++ b/Into the Inferno.html
@@ -179,7 +179,7 @@ Nor ever chaste, except you ravish me. </p><br>
 <br><br>
 <h2>Introduction</h2>
 <p>
-    	The problem that persists today is not that meaning has abandoned us, but that the conditions under which it once appeared are no longer valid. It used to be the case that meaning was provided, the axiomatic priors defined, and all that followed were inferences from them. Yet over time, cracks slowly began to appear in this façade of transcendental meaning, until it could no longer hold. The death of god, brought about by man, and the tragedies of contemporary history fractured the inherited unity of meaning. What followed was not clarity, but proliferation.</p>
+    	The problem that persists today is not that meaning has abandoned us, but that the conditions under which it once appeared are no longer valid. It used to be the case that meaning was provided, the axiomatic priors defined, and all that followed were inferences from them. Yet over time, cracks slowly began to appear in this façade of transcendental meaning, until it could no longer hold. The death of God, brought about by man, and the tragedies of contemporary history fractured the inherited unity of meaning. What followed was not clarity, but proliferation.</p>
 
 	<p>We find ourselves at a crossroads, unable to know for certain whether any path still leads beyond this condition—if such an exit exists at all.</p>
     <p>But what exactly led us to this condition? 
@@ -204,8 +204,21 @@ Why did we ever refute it?</p>
 
 <p>	This is not to say that the camel is weak—quite far from it—but the camel does not question the value of the burden. It proves itself by carrying it. 
 	But the camel can only travel so far. The metamorphosis of the camel was demanded by lucidity. By attempting to reconcile lived reality and inherited abstraction, incompatibility emerges. The camel no longer believes.</p>
-
-   </div>
+<div class="break1">
+  <hr>
+</div>
+<h2 style="padding-top: 50px;">Icarian Liberation</h2>
+<p class="poem">	“Yesterday’s meditation raised doubts—ones that are too serious to be ignored—which I can see no way of resolving. I feel like someone who is suddenly dropped into a deep whirlpool that tumbles him around so that he can neither stand on the bottom nor swim to the top.”</p>
+<br><p class="poem" style="font-style: italic;">- René Descartes -</p><br>
+<p>	The lucidity of Descartes, evident in his encounter with radical doubt, reveals just how disorienting this confrontation can be. Regardless of its apparent empowerment from the outset, the bittersweet truth is that it unmoors us and throws us into a state of vertigo. </p>
+<p>	Allowing doubt to nestle within our psyche does not simply negate a specific set of beliefs; it rids us of the authority that once made belief stable. No inherited form of consolation remains intact. We have brought about this condition ourselves, and it cannot simply be undone. </p>
+<p>	With solid ground now gone, we find ourselves suspended—no longer bound by inherited command, yet not yet capable of creation. All that we have achieved is lucidity and not the ability to face this horrendous truth—the possibility that reality may not be teleologically ordered with us in mind.</p>   
+<p>	This realization is liberation, but of a precarious kind. Not arrival but altitude. Not freedom secured but freedom unmoored. </p>
+<p>	In this condition, we resemble Icarus.</p>
+<p>	Returning once more to Nietzsche’s symbols, we now notice that the camel has transformed into the lion—the one who doubts, the one who rebels. The spirit of the lion acquires the power to say no—to inherited values, sacred commandments, and imposed meaning. </p>
+<p>	The lion destroys and wreaks havoc on pre-existing systems but erects nothing in its place. </p>
+<p>	We rise—like Icarus—without knowing what lies beyond this destruction. Only now does the danger of flight reveal itself.</p>
+</div>
     <button id="back-to-top" style="display: none;">
         <img src="Up.png" alt="Back to Top">
     </button>
