--- a/Univariate Linear Regression.html
+++ b/Univariate Linear Regression.html
@@ -164,7 +164,7 @@
       </div>
     <script src="script.js"></script>
     <div class="section-title">
-        <h1>Estimation of Salary via a Univariate Linear Regression: A First-Principles Approach</h1>
+        <h1>Estimation of Salary via Univariate Linear Regression: A First-Principles Approach</h1>
     </div>
     <div class="blog-content">
         <h1>
