MLR page update

--- a/Multiple Linear Regression.html
+++ b/Multiple Linear Regression.html
@@ -287,7 +287,7 @@ J(\mathbf{w}, b)
 		\beta_0 = \beta_0 \cdot 1 = \beta_0 \sum_{k=1}^{K} D_k.
 	\]</p>
         <p>and substituting this value back into the original equation gives :</p>
-        <p>	\[
+        <p style="overflow: hidden;">	\[
 		\hat y = \sum_{j=1}^{p}\beta_j x_j + \sum_{k=1}^{K}\gamma_k D_k + \beta_0\sum_{k=1}^{K} D_k = \sum_{j=1}^{p}\beta_j x_j + \sum_{k=1}^{K}(\gamma_k+\beta_0)D_k.
 	\]</p>
         <p>This shows that the intercept could be “absorbed” into the dummy coefficients because the dummies always sum to 1.</p>
