Updates to Into the Inferno

--- a/Into the Inferno.html
+++ b/Into the Inferno.html
@@ -25,6 +25,9 @@
       .inferno2{
         margin-top: -350px !important;
       }
+      .inferno3{
+        margin-top: -330px !important;
+      }
     }
 
     @media (max-width:555px) {
@@ -57,13 +60,17 @@
       }
 
       .inferno2{
-        margin-top: -300px !important;
+        margin-top: -220px !important;
       }
-      
+      .inferno3{
+        margin-top:10px !important;
+      }
       .hero-container{
         height: 100px !important;
       }
-
+      .hero-container2{
+        height: 150px !important;
+      }
     }
   </style>
 </head>
@@ -209,15 +216,47 @@ Why did we ever refute it?</p>
 </div>
 <h2 style="padding-top: 50px;">Icarian Liberation</h2>
 <p class="poem">	“Yesterday’s meditation raised doubts—ones that are too serious to be ignored—which I can see no way of resolving. I feel like someone who is suddenly dropped into a deep whirlpool that tumbles him around so that he can neither stand on the bottom nor swim to the top.”</p>
-<br><p class="poem" style="font-style: italic;">- René Descartes -</p><br>
+<br><p class="poem" style="font-style: italic;">- René Descartes : Meditations on First Philosophy -</p><br>
 <p>	The lucidity of Descartes, evident in his encounter with radical doubt, reveals just how disorienting this confrontation can be. Regardless of its apparent empowerment from the outset, the bittersweet truth is that it unmoors us and throws us into a state of vertigo. </p>
 <p>	Allowing doubt to nestle within our psyche does not simply negate a specific set of beliefs; it rids us of the authority that once made belief stable. No inherited form of consolation remains intact. We have brought about this condition ourselves, and it cannot simply be undone. </p>
-<p>	With solid ground now gone, we find ourselves suspended—no longer bound by inherited command, yet not yet capable of creation. All that we have achieved is lucidity and not the ability to face this horrendous truth—the possibility that reality may not be teleologically ordered with us in mind.</p>   
+<p>	With solid ground now gone, we find ourselves suspended—no longer bound by inherited command, yet not yet capable of creation. All that we have achieved is lucidity and not yet the strength to face what it reveals—the possibility that reality may not be teleologically ordered with us in mind.</p>   
 <p>	This realization is liberation, but of a precarious kind. Not arrival but altitude. Not freedom secured but freedom unmoored. </p>
 <p>	In this condition, we resemble Icarus.</p>
 <p>	Returning once more to Nietzsche’s symbols, we now notice that the camel has transformed into the lion—the one who doubts, the one who rebels. The spirit of the lion acquires the power to say no—to inherited values, sacred commandments, and imposed meaning. </p>
-<p>	The lion destroys and wreaks havoc on pre-existing systems but erects nothing in its place. </p>
+<p>	The lion dismantles inherited systems; but erects nothing in its place.</p>
 <p>	We rise—like Icarus—without knowing what lies beyond this destruction. Only now does the danger of flight reveal itself.</p>
+<div class="break1">
+  <hr>
+</div>
+<h2 style="padding-top: 50px;">Beyond Good and Evil</h2>
+<p class="poem">	“He who fights with monsters might take care lest he thereby become a monster. And if you gaze for long into an abyss, the abyss gazes also into you.”</p>
+<br><p class="poem" style="font-style: italic;">- Friedrich Nietzsche : Beyond Good and Evil -</p><br>
+<p>This dismantling of transcendental meaning does not, with it, bring any form of solace; nor does it amplify the chaos. We sit in silence with a purpose for our existence yet to be negotiated. Within the depths of foundational questioning we only find void.</p>
+<p>Even though there seems to be no justification—we continue to speak in the language of value, try to reason about it and even build on top of a foundation that no longer exists. Existence, to this end, appears structurally unsupported. </p>
+<p>We notice that the negation of inherited meaning has not liberated us in the way we hoped that it would. It has only produced suspension. </p>
+<p>This is nihilism—not the refusal of meaning, but the loss of ground to stand on. Habitual activities go on, perhaps as cultural residue, yet they are no longer rooted in metaphysical transcendence. They now await either abandonment or reconstitution</p>
+<p>Upon discovering this silence of the abyss, the human spirit does not respond uniformly. Ivan Karamazov, unable to reconcile worldly suffering with transcendental omni-benevolence, returns the ticket—not in triumph but in anguish. He rejects the narrative he inherited, yet finds no alternative ground upon which to stand.</p>
+<p>Some deliquesce under this tension. Svidrigailov sees the absence of transcendence as permission to make the world one’s playground—delving into indulgence. If there truly is no moral arbiter then anything is permitted. Yet even this hedonic reaction to an unbearable realization contains an air of exhaustion instead of contentment.</p>
+<p>The most extreme of reactions can be seen in Kirilov. If no higher power commands our negation then assuming its role and becoming the executioner would be the ultimate act of freedom. This reasoning, by asserting total freedom, results in total annihilation.</p>
+<p>But despite these responses varying in temperament, one thing remains constant. That is, the discovery that the abyss does not answer. Not before, not after. It continues to remain indifferent to our reactions.</p>
+<p>It does not rage. It remains silent. Our newfound realization does not give us peace of mind, yet this is the consequence we now inhabit. The descent is now complete.</p>
+<br>
+<div class="break1">
+  <hr>
+</div>
+<br>
+<br>
+<div class="hero-container2" style="height:450px; overflow: hidden; border-radius: 1em;">
+<section class="hero-background" style="border-radius: 1em;">
+    <div class="parallax-image progressive-bg inferno3"  data-preview="Botticelli Inferno.jpg"  data-src="Botticelli Inferno.jpg" style=" margin-top: -400px; background-size: 125%;" ></div>
+    <div class="overlay-text">
+      <!-- <a href="The Great Red Dragon.html" style="text-decoration: none; color: inherit;"> -->
+      <h1></h1>
+      <!-- </a> -->
+      <p></p>
+    </div>
+</section>
+</div>
 </div>
     <button id="back-to-top" style="display: none;">
         <img src="Up.png" alt="Back to Top">
