Moved Into the Inferno from Fragments to Articulations

--- a/Essays.html
+++ b/Essays.html
@@ -83,6 +83,7 @@
     </div>
     <h1>Rendered Conceptions</h1>
     <ul class="fragments-list">
+            <li><a href="Into the Inferno.html" class="recent-post-link">The fall of God</a></li>
       <li><a href="Univariate Linear Regression.html" class="recent-post-link">Cavorting with Univariate Linear Regression</a></li>
     </ul>
   </section>
